[tool.poetry]
name = "workshop-modern-cpp"
version = "0.1.0"
description = "Minimum utilities for training purpose"
authors = ["Maciej Broda <nutek12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
ipython = "^8.16.1"
matplotlib = "^3.8.0"
jinja2 = "^3.1.2"
wxpython = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
